CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
SET(CMAKE_C_FLAGS_RELEASE "-Wall -O2")
SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_BUILD_TYPE Release)

# プロジェクト名
PROJECT(un2ch C)
SET(serial "1.0.0")
SET(soserial "1")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
# ライブラリ
ADD_LIBRARY(un2ch SHARED un2ch.c)
TARGET_LINK_LIBRARIES(un2ch curl unmap unstring)
SET_TARGET_PROPERTIES(un2ch PROPERTIES VERSION ${serial} SOVERSION ${soserial})
INSTALL(TARGETS un2ch LIBRARY DESTINATION lib)
INSTALL(FILES un2ch.h DESTINATION include)

